# data-pipeline-template

./: CLAUDE.md  README.md  catalog-info.yaml  template.yaml
docs/: DECISIONS.md  index.md
skeleton/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog-info.yaml  pyproject.toml
skeleton/${{values.name}}/: .gitignore  .sqlfluff  Dockerfile  catalog-info.yaml  requirements.txt
skeleton/${{values.name}}/airflow/dags/: ${{values.name}}_dag.py
skeleton/${{values.name}}/dbt/: dbt_project.yml  profiles.yml.example
skeleton/${{values.name}}/dbt/models/marts/: dim_example.sql
skeleton/${{values.name}}/dbt/models/staging/: sources.yml  stg_example.sql
skeleton/${{values.name}}/tests/: test_dbt.py
skeleton/.argo/: ci.yaml
skeleton/.github/workflows/: cd.yml  ci.yml
skeleton/docs/: EXTENDING.md  GETTING_STARTED.md  PATTERNS.md  TROUBLESHOOTING.md  architecture.md
skeleton/docs/adr/: 0001-python-framework.md  0002-etl-architecture.md  0003-grafana-observability.md  0004-batch-streaming-patterns.md  0005-data-quality.md
skeleton/k8s/: kustomization.yaml  rollout.yaml
skeleton/k8s/base/: configmap.yaml  cronjob.yaml  deployment.yaml  kustomization.yaml  serviceaccount.yaml
skeleton/orchestration/airflow/dags/: pipeline_dag.py
skeleton/orchestration/dagster/: pipeline_job.py
skeleton/orchestration/prefect/: pipeline_flow.py
skeleton/src/: __init__.py  cli.py  pipeline.py
skeleton/src/core/: __init__.py  config.py  logging.py  metrics.py  notifications.py
skeleton/src/extractors/: __init__.py  api.py  base.py  database.py  s3.py  streaming.py
skeleton/src/loaders/: __init__.py  base.py  database.py  s3.py
skeleton/src/pipelines/: example.py
skeleton/src/quality/: __init__.py  base.py  validators.py
skeleton/src/transformers/: __init__.py  base.py  common.py  dataframe.py
skeleton/tests/: __init__.py  conftest.py  test_pipeline.py  test_transformers.py  test_validators.py
