[project]
name = "${{values.name}}"
version = "0.1.0"
description = "${{values.description}}"
readme = "README.md"
requires-python = ">=${{values.pythonVersion}}"
license = { text = "Proprietary" }
authors = [
    { name = "${{values.owner}}" }
]
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    "ddtrace>=2.16.0",
    "boto3>=1.35.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.14.0",
    "rich>=13.9.0",
    {%- if values.computeEngine == "polars" %}
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    {%- endif %}
    {%- if values.computeEngine == "pandas" %}
    "pandas>=2.2.0",
    "pyarrow>=18.1.0",
    {%- endif %}
    {%- if values.computeEngine == "dask" %}
    "dask[complete]>=2024.12.0",
    "pyarrow>=18.1.0",
    {%- endif %}
    {%- if values.computeEngine == "spark" %}
    "pyspark>=3.5.0",
    {%- endif %}
    {%- if values.dataFormat == "delta" %}
    "deltalake>=0.22.0",
    {%- endif %}
    {%- if values.dataFormat == "iceberg" %}
    "pyiceberg>=0.8.0",
    {%- endif %}
    {%- if values.sourceType == "postgres" or values.sinkType == "postgres" %}
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.36",
    {%- endif %}
    {%- if values.sourceType == "mysql" %}
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.36",
    {%- endif %}
    {%- if values.sourceType == "redshift" or values.sinkType == "redshift" %}
    "redshift-connector>=2.1.0",
    "sqlalchemy-redshift>=0.8.0",
    {%- endif %}
    {%- if values.sinkType == "snowflake" %}
    "snowflake-connector-python>=3.12.0",
    "snowflake-sqlalchemy>=1.6.0",
    {%- endif %}
    {%- if values.sinkType == "bigquery" %}
    "google-cloud-bigquery>=3.27.0",
    "pandas-gbq>=0.24.0",
    {%- endif %}
    {%- if values.sourceType == "dynamodb" or values.sinkType == "dynamodb" %}
    "boto3>=1.35.0",
    {%- endif %}
    {%- if values.sourceType == "kinesis" %}
    "boto3>=1.35.0",
    {%- endif %}
    {%- if values.sourceType == "kafka" %}
    "confluent-kafka>=2.6.0",
    {%- endif %}
    {%- if values.sourceType == "msk" %}
    "confluent-kafka>=2.6.0",
    "aws-msk-iam-sasl-signer-python>=1.0.0",
    {%- endif %}
    {%- if values.sinkType == "elasticsearch" %}
    "opensearch-py>=2.8.0",
    {%- endif %}
    {%- if values.sourceType == "api" %}
    "httpx>=0.28.0",
    {%- endif %}
    {%- if values.dataQuality == "great-expectations" %}
    "great-expectations>=1.2.0",
    {%- endif %}
    {%- if values.dataQuality == "pandera" %}
    {%- if values.computeEngine == "polars" %}
    "pandera[polars]>=0.21.0",
    {%- else %}
    "pandera>=0.21.0",
    {%- endif %}
    {%- endif %}
    {%- if values.dataQuality == "soda" %}
    "soda-core>=3.3.0",
    {%- endif %}
    {%- if values.dataLineage %}
    "openlineage-python>=1.25.0",
    {%- endif %}
    {%- if values.notifications == "slack" %}
    "slack-sdk>=3.33.0",
    {%- endif %}
    {%- if values.orchestrator == "airflow" %}
    "apache-airflow>=2.10.0",
    {%- endif %}
    {%- if values.orchestrator == "dagster" %}
    "dagster>=1.9.0",
    "dagster-aws>=0.25.0",
    {%- endif %}
    {%- if values.orchestrator == "prefect" %}
    "prefect>=3.1.0",
    "prefect-aws>=0.5.0",
    {%- endif %}
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.8.1",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "bandit[toml]>=1.7.0",
    "moto[all]>=5.0.0",
    {%- if values.sourceType == "postgres" or values.sinkType == "postgres" %}
    "testcontainers[postgres]>=4.8.0",
    {%- endif %}
]

[project.scripts]
${{values.name}} = "src.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.8.1",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "bandit[toml]>=1.7.0",
    "moto[all]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py${{values.pythonVersion | replace('.', '')}}"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit
    "A",      # flake8-builtins
    "DTZ",    # flake8-datetimez
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "${{values.pythonVersion}}"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -x"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
